assets/css/custom.css
/* ... */
/* line 86, ../scss/_wp-plugins.scss */
#calendar_wrap caption {
  color: #bf7485;
  margin-bottom: 10px;
}

/* 
 *  Kebo Tweets
 */
/* line 98, ../scss/_wp-plugins.scss */
.kebo-tweets a.kaccount, .kebo-tweets a.kdate {
  font-size: 96% !important;
}

/*  
 *  Mailchimp Email Signup 
 */
/* line 108, ../scss/_wp-plugins.scss */
#mc_signup {
  padding: 0 !important;
}
/* line 110, ../scss/_wp-plugins.scss */
#mc_signup .mergeRow {
  display: none !important;
  padding: 0 !important;
}
/* line 114, ../scss/_wp-plugins.scss */
#mc_signup form {
  padding: 0 !important;
}

/* line 118, ../scss/_wp-plugins.scss */
#mc_signup_submit {
  margin-top: 0;
  width: 100% !important;
  background: #b12e4f;
  padding: 10px;
  margin-top: 0 !important;
  border: 0;
  color: white;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -webkit-transition: background-color, 0.25s;
  -moz-transition: background-color, 0.25s;
  -o-transition: background-color, 0.25s;
  transition: background-color, 0.25s;
}
/* line 128, ../scss/_wp-plugins.scss */
#mc_signup_submit:hover {
  background-color: #d15070;
  -webkit-transition: background-color, 0.25s;
  -moz-transition: background-color, 0.25s;
  -o-transition: background-color, 0.25s;
  transition: background-color, 0.25s;
}

/* line 133, ../scss/_wp-plugins.scss */
.mc_success_msg {
  color: #bf7485;
}

/* line 136, ../scss/_wp-plugins.scss */
#mc_message {
  margin-bottom: 15px;
  margin-top: -2px;
}

/* line 19, ../scss/custom.scss */
html, body {
  overflow-x: hidden;
}

/* line 22, ../scss/custom.scss */
body {
  padding: 0;
  background-color: #000;
}

/* line 26, ../scss/custom.scss */
article {
  padding-left: 0 !important;
}

/* line 36, ../scss/custom.scss */
pre {
  color: #666;
  margin: 30px 0;
}

/* line 40, ../scss/custom.scss */
time {
  color: #999;
}

/* line 43, ../scss/custom.scss */
table {
  border-spacing: 0 !important;
  border-color: transparent !important;
}

/* line 47, ../scss/custom.scss */
a {
  color: #bf7485;
}
/* line 49, ../scss/custom.scss */
a:hover {
  color: #d4a1ad;
}

/* line 53, ../scss/custom.scss */
a:hover {
  text-decoration: none !important;
}

/* line 56, ../scss/custom.scss */
:focus, a:focus {
  outline: -webkit-focus-ring-color auto 0;
}

/* line 60, ../scss/custom.scss */
.row {
  margin-left: 0;
  margin-right: 0;
}

@media only all and (max-width: 767px) {
  /* line 64, ../scss/custom.scss */
  .container {
    padding: 0 25px 5px;
  }
}

/* line 69, ../scss/custom.scss */
.page-header {
  border: 0;
  margin: 20px 0 0;
  padding-bottom: 0;
}
@media only all and (max-width: 767px) {
  /* line 69, ../scss/custom.scss */
  .page-header {
    margin: 10px 0 0;
  }
}
@media only all and (min-width: 480px) and (max-width: 767px) {
  /* line 76, ../scss/custom.scss */
  .page-header h1 {
    text-align: right;
    margin: 30px 0 0 15px;
  }
}
@media only all and (max-width: 767px) {
  /* line 82, ../scss/custom.scss */
  .page-header .page-title {
    margin-bottom: 30px;
  }
}

@media only all and (max-width: 767px) {
  /* line 88, ../scss/custom.scss */
  .single .page-header h1 {
    text-align: left;
    margin: 10px 0 20px;
  }
}

/* line 94, ../scss/custom.scss */
.hentry {
  margin: 10px;
}

/* line 97, ../scss/custom.scss */
.post {
  margin: 0 0 40px 0;
}

/* line 100, ../scss/custom.scss */
.entry-meta {
  margin-bottom: 20px;
  line-height: 150%;
}

/* line 104, ../scss/custom.scss */
.main-content {
  padding-top: 85px;
  padding-bottom: 10px;
}
@media only all and (max-width: 991px) {
  /* line 104, ../scss/custom.scss */
  .main-content {
    padding-top: 70px;
    padding-bottom: 0px;
  }
}
@media only all and (max-width: 767px) {
  /* line 104, ../scss/custom.scss */
  .main-content {
    padding-top: 0px;
    padding-bottom: 0px;
  }
}
/* line 117, ../scss/custom.scss */
.main-content > .container {
  padding: 0;
}
@media only all and (max-width: 767px) {
  /* line 117, ../scss/custom.scss */
  .main-content > .container {
    background-color: transparent;
    padding: 0 15px;
  }
}
/* line 125, ../scss/custom.scss */
.main-content table, .main-content tbody, .main-content td, .main-content tr {
  border: 0 !important;
}

/* line 130, ../scss/custom.scss */
.main-content-inner {
  padding-bottom: 0;
}
@media only all and (max-width: 767px) {
  /* line 133, ../scss/custom.scss */
  .main-content-inner .col-sm-6 {
    padding: 0;
  }
}

/* line 141, ../scss/custom.scss */
.home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
  margin: 15px;
}
@media only all and (max-width: 767px) {
  /* line 141, ../scss/custom.scss */
  .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
    margin: 10px;
  }
}

/* line 148, ../scss/custom.scss */
.content {
  margin-left: 15px;
  margin-right: 15px;
}
@media only all and (max-width: 767px) {
  /* line 148, ../scss/custom.scss */
  .content {
    margin-left: 0;
    margin-right: 0;
  }
}

/* line 159, ../scss/custom.scss */
.image img {
  width: 100% !important;
  height: auto !important;
}
@media only all and (max-width: 991px) {
  /* line 156, ../scss/custom.scss */
  .image {
    width: 100%;
  }
  /* line 166, ../scss/custom.scss */
  .image img {
    width: 100% !important;
  }
}

/* line 172, ../scss/custom.scss */
.search, .error404 {
  padding: 60px;
}

/* line 176, ../scss/custom.scss */
#avatar {
  width: 17px;
  height: 17px;
  margin-top: 1px;
  margin-right: 13px;
}

/* line 183, ../scss/custom.scss */
.col-content {
  padding-left: 0px;
  padding-right: 50px;
  overflow: hidden;
}
/* line 188, ../scss/custom.scss */
.col-content ul {
  list-style: disc !important;
}
@media only all and (max-width: 991px) {
  /* line 183, ../scss/custom.scss */
  .col-content {
    padding-right: 40px;
  }
}
/* ... */

